--- a/render/style.css
+++ b/render/style.css
@@ -52,8 +52,8 @@ p {
 }
 
 .tt {
-  font-size: 2rem;
-  margin-top: 2rem;
+  font-size: 1.5rem;
+  margin-top: 0.5rem;
 }
 
 .td {
@@ -67,31 +67,31 @@ p {
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   text-align: center;
   margin-bottom: 40px;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   background-color: #D6E1ED;
   margin: 0;
-  padding: 20px;
+  padding: 15px;
   box-shadow: 0px 0px 3px 0px #adc3db;
 }
 
 h1 {
   text-align: center;
   color: #FFF;
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: normal;
   background-color: #d5a295;
   margin: 0;
-  padding: 20px;
+  padding: 15px;
 }
 
 #overviewlink {
   position: absolute;
   font-size: 2rem;
-  top: 1.5rem;
+  top: 1rem;
   left: 100px;
   font-weight: normal;
   font-family: 'Lato', sans-serif;
@@ -106,7 +106,7 @@ h1 {
   color: white;
   font-size: 2.5rem;
   right: 100px;
-  top: 1rem;
+  top: 0.5rem;
   cursor: pointer;
 }
 
@@ -119,7 +119,7 @@ h1 {
 
 .arrow {
   font-size: 2rem;
-  padding-top: 1rem;
+  padding-top: 0.5rem;
   padding-bottom: 1rem;
   padding-left: 10rem;
   padding-right: 10rem;
